# rust

./: readme.txt
02_tipos_basicos/tipos_basicos/: Cargo.toml
02_tipos_basicos/tipos_basicos/src/: main.rs
03_estructuras_de_control/estructuras_de_control/: Cargo.toml
03_estructuras_de_control/estructuras_de_control/src/: main.rs
04_operaciones_tipos_basicos/operaciones_tipos_basicos/: Cargo.toml
04_operaciones_tipos_basicos/operaciones_tipos_basicos/src/: main.rs
05_structs_y_traits/structs_y_traits/: Cargo.toml
05_structs_y_traits/structs_y_traits/src/: main.rs
06_modulos/modulos/: Cargo.toml
06_modulos/modulos/src/: main.rs
06_modulos/modulos/src/modulos/: matematicas.rs  mod.rs  saludos.rs
07_manejo_de_errores/manejo_de_errores/: Cargo.toml
07_manejo_de_errores/manejo_de_errores/src/: main.rs
08_ownwership_y_borrowing/ownwership_y_borrowing/: Cargo.toml
08_ownwership_y_borrowing/ownwership_y_borrowing/src/: main.rs
08_ownwership_y_borrowing/ownwership_y_borrowing_con_structs/: Cargo.toml
08_ownwership_y_borrowing/ownwership_y_borrowing_con_structs/src/: main.rs
10_simple_api_rest/postgres_api_rest/: Cargo.toml  init.sql  postgres.txt
10_simple_api_rest/postgres_api_rest/src/: main.rs
10_simple_api_rest/redis_api_rest/: Cargo.toml  tests.txt  valkey.txt
10_simple_api_rest/redis_api_rest/src/: main.rs
10_simple_api_rest/simple_api_rest/: Cargo.toml  tests.txt
10_simple_api_rest/simple_api_rest/src/: main.rs
