[package]
name = "postgres_api_rest"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.29.1", features = ["tokio-comp"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_codegen = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }